[gfibot]
projects = [
    "Mihara/RasterPropMonitor",
    "Revolutionary-Games/Thrive",
    "osmlab/name-suggestion-index",
    "scikit-learn/scikit-learn",
    "pandas-dev/pandas",
    "mui-org/material-ui",
]
github_graphql_schema_path = "gfibot/data/github_graphql_schema.graphql"

[mongodb]
url = "mongodb://localhost:27017"
db = "gfibot"

[tool.poetry]
name = "gfi-bot"
version = "0.1.0"
description = "ML-powered 🤖 for finding and labeling good first issues in your GitHub project!"
authors = [
    "Hao He <heh@pku.edu.cn>",
    "Wenxin Xiao <wenxin.xiao@stu.pku.edu.cn>",
    "Haonan Su <haonan.su@pku.edu.cn>",
    "Runzhi He <rzhe@pku.edu.cn>",
]

[tool.poetry.dependencies]
python = "^3.9"
# Utilities
toml = "^0.10.2"
tqdm = "^4.62.3"
python-dateutil = "^2.8.2"
dateutils = "^0.6.12"
# MongoDB
pymongo = { extras = ["srv"], version = "~4.0.1" }
mongoengine = "^0.24.1"
mongomock = "^4.0.0"
# Network
requests = "^2.26.0"
PyGithub = "^1.55"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.1.1"
yagmail = "^0.15.277"
gql = "^3.2.0"
requests-toolbelt = "^0.9.1"
# Machine Learning and Data Science
pandas = "~1.3.5"
numpy = "^1.21.5"
textstat = "^0.7.2"
xgboost = "~1.5.1"
sklearn = "^0.0"
sentistrength = "^0.0.9"
nltk = "^3.7"
gensim = "^4.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
black = "*"
pre-commit = "*"
