[gfibot]
projects = [ # This list of 100 projects comes from RecGFI paper
    "osmlab/name-suggestion-index",
    "scikit-learn/scikit-learn",
    "pandas-dev/pandas",
    "mui-org/material-ui",
    "OpenMined/PySyft",
    "WordPress/gutenberg",
    "elastic/elasticsearch",
    "saltstack/salt",
    "Revolutionary-Games/Thrive",
    "sympy/sympy",
    "DotNetAnalyzers/StyleCopAnalyzers",
    "CleverRaven/Cataclysm-DDA",
    "rubberduck-vba/Rubberduck",
    "dotnet/runtime",
    "Leaflet/Leaflet",
    "nodejs/node",
    "elastic/kibana",
    "strongbox/strongbox",
    "microsoft/vscode",
    "duckduckgo/zeroclickinfo-spice",
    "jainaman224/Algo_Ds_Notes",
    "symfony/symfony",
    "AnalyticalGraphicsInc/cesium",
    "dotnet/roslyn",
    "gatsbyjs/gatsby",
    "zulip/zulip",
    "xamarin/Xamarin.Forms",
    "sindresorhus/refined-github",
    "symfony/symfony-docs",
    "appleseedhq/appleseed",
    "zeit/next.js",
    "FreezingMoon/AncientBeast",
    "OpenRA/OpenRA",
    "freeCodeCamp/freeCodeCamp",
    "OpenRCT2/OpenRCT2",
    "akkadotnet/akka.net",
    "facebook/react",
    "phpmyadmin/phpmyadmin",
    "JabRef/jabref",
    "prestodb/presto",
    "serverless/serverless",
    "microsoft/TypeScript",
    "Elgg/Elgg",
    "Swati4star/Images-to-PDF",
    "checkstyle/checkstyle",
    "dotnet/coreclr",
    "internetarchive/openlibrary",
    "oppia/oppia",
    "facebook/react-native",
    "RaRe-Technologies/gensim",
    "the-tale/the-tale",
    "Sylius/Sylius",
    "mozilla/fxa-content-server",
    "Trustroots/trustroots",
    "TryGhost/Ghost",
    "Qiskit/qiskit-terra",
    "mozilla/thimble.mozilla.org",
    "borgbackup/borg",
    "x64dbg/x64dbg",
    "PowerShell/PowerShell",
    "aws/aws-cdk",
    "matplotlib/matplotlib",
    "nextcloud/server",
    "aframevr/aframe",
    "osquery/osquery",
    "facebook/docusaurus",
    "WeblateOrg/weblate",
    "tomato42/tlsfuzzer",
    "dotnet/corert",
    "pnp/office365-cli",
    "Yoast/wordpress-seo",
    "gitextensions/gitextensions",
    "Showndarya/Hacktoberfest",
    "Mihara/RasterPropMonitor",
    "jupyterlab/jupyterlab",
    "elastic/eui",
    "netlify/netlify-cms",
    "pypa/warehouse",
    "bitcoin/bitcoin",
    "cBioPortal/cbioportal",
    "magento/magento2",
    "dotnet/machinelearning",
    "nilearn/nilearn",
    "yarnpkg/yarn",
    "stylelint/stylelint",
    "sendgrid/docs",
    "MvvmCross/MvvmCross",
    "composer/composer",
    "SimpleMachines/SMF2.1",
    "Submitty/Submitty",
    "adobe/brackets",
    "qTox/qTox",
    "moment/moment",
    "mne-tools/mne-python",
    "eslint/eslint",
    "facebook/jest",
    "chocolatey/choco",
    "octokit/octokit.net",
    "eclipse/omr",
    "badges/shields",
]
github_graphql_schema_path = "gfibot/data/github_graphql_schema.graphql"
model_path="models/"
cache_path=".cache/"
default_gfi_threshold = 0.5  # default min confidence level for an issue to be considered GFI
default_newcomer_threshold = 5  # default max # of commits for newcomers

[mongodb]
url = "mongodb://localhost:27020"
db = "gfibot"

[mongodb_dev]
url = "mongodb://localhost:27021"
db = "gfibot"

[tool.poetry]
name = "gfi-bot"
version = "0.1.0"
description = "ML-powered 🤖 for finding and labeling good first issues in your GitHub project!"
authors = [
    "Hao He <heh@pku.edu.cn>",
    "Wenxin Xiao <wenxin.xiao@stu.pku.edu.cn>",
    "Haonan Su <haonan.su@pku.edu.cn>",
    "Runzhi He <rzhe@pku.edu.cn>",
    "Minghui Zhou <zhmh@pku.edu.cn>"
]

[tool.poetry.dependencies]
python = "^3.9"
# Utilities
toml = "^0.10.2"
tqdm = "^4.62.3"
python-dateutil = "^2.8.2"
dateutils = "^0.6.12"
multiprocess = "^0.70.13"
tzlocal = "*"
textblob = "*"
# MongoDB
pymongo = {version = "^3.12.3", extras = ["srv"]}
mongoengine = "^0.24.1"
mongomock = "^4.0.0"
# Network
requests = "^2.26.0"
requests_toolbelt = "^0.9.1"
PyGithub = "^1.55"
yagmail = "^0.15.277"
gql = "^3.2.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
# Machine Learning and Data Science
pandas = "~1.3.5"
numpy = "^1.21.5"
textstat = "^0.7.2"
xgboost = "~1.5.1"
lightgbm = "~3.3.2"
sklearn = "^0.0"
sentistrength = "^0.0.9"
nltk = "^3.7"
gensim = "^4.1.2"
gunicorn = "^20.1.0"
transformers = "^4.29.2"
huggingface-hub = "^0.16.4"
safetensors = "^0.3.3"
spacy = "^3.4.1"
thinc = "^8.1.2"
confection = "^0.0.2"
typer = "^0.4.2"
jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
wasabi = "^0.10.1"
srsly = "^2.4.4"
catalogue = "^2.0.4"
cymem = "^2.0.6"
preshed = "^3.0.7"
murmurhash = "^1.0.8"
blis = "^0.7.8"
langcodes = "^3.3.0"
torch = [
  {url="https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "python_version == '3.9' and sys_platform == 'linux' and platform_machine == 'x86_64'"}
]
# Scheduler
gevent = "^21.12.0"
APScheduler = "^3.9.1"
# the official psutil wheel won't compile on armv8 :(
psutil = [
    {version="^5.9.1", markers="platform_machine!='aarch64'"},
    {url="https://github.com/ddelange/psutil/releases/download/release-5.9.1/psutil-5.9.1-cp36-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", markers="platform_machine=='aarch64'"},
    ]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
black = "*"
pre-commit = "*"